# Gamers

./: README.md
llm/: pyproject.toml  칭호생성.py  칭호생성.yaml
llm/examples/: CoE.py  MCP.py  MoE.py
llm/examples/Gukbap-Qwen/: Modelfile
