[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["uowol <alllhvhla@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.4.7"
langchain-community = "^0.3.20"
langchain = "^0.3.21"
langchain-core = "^0.3.48"
langchain-ollama = "^0.3.0"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
